# ExperimentModelling

./: README.md
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/hands-on/: Fundamentals.ipynb
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/src/: main.py
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/tests/: payload_augment_data
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/use_cases/: augment_data_call.py
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/use_cases/UC2/: IoT.py  columns.py  phishing.py
AnalyticsTaskLibrary/DataAugmentation/policy-based-data-augmentation/use_cases/models/: model.py  models.py
AnalyticsTaskLibrary/QueryMLER/: README.md
AnalyticsTaskLibrary/QueryMLER/bert_inference/: bert_infer.py  model_api.py
DataSelection/auto_feat/crypto_smartphone/: base_table.csv  dns_further.csv  dns_interlog.csv  dns_next.csv  dns_protocol.csv  dns_rcodes.csv
ExperimentDslEditor/experiment-dsl/: README.md
ExperimentDslEditor/experiment-dsl-cmdline-tools/: README.md  pom.xml
ExperimentDslEditor/experiment-dsl/examples/AutoML/: CrossValidation.xxp  (+1 more)
ExperimentDslEditor/extremexp-dsl-framework/: Dockerfile  README.md  launch.sh
ExperimentDslEditor/extremexp-dsl-framework/eu.extremexp.dsl.parent/: pom.xml
extremexp-metamodels/: README.md
extremexp-metamodels/model/: workflow.aird  workflow.genmodel
(+1519 files in other folders)
